--- a/Bolgrot.Core.Common/Bolgrot.Core.Common.csproj
+++ b/Bolgrot.Core.Common/Bolgrot.Core.Common.csproj
@@ -6,14 +6,12 @@
 
     <ItemGroup>
       <PackageReference Include="Autofac" Version="5.2.0" />
-      <PackageReference Include="Dapper" Version="2.0.35" />
       <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+      <PackageReference Include="ServiceStack.OrmLite.MySql" Version="5.9.0" />
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Managers" />
-      <Folder Include="Network" />
-      <Folder Include="Repository" />
+      <ProjectReference Include="..\Bolgrot.Core.Ankama.Protocol\Bolgrot.Core.Ankama.Protocol.csproj" />
     </ItemGroup>
 
 </Project>
