[Server] Auth - Implementing client + frame intercepter OnMessageReceivedAsync()

--- a/Bolgrot.Server.Auth/Bolgrot.Server.Auth.csproj
+++ b/Bolgrot.Server.Auth/Bolgrot.Server.Auth.csproj
@@ -7,12 +7,12 @@
 
     <ItemGroup>
       <PackageReference Include="Autofac" Version="5.2.0" />
-      <PackageReference Include="Dapper" Version="2.0.35" />
       <PackageReference Include="EmbedIO" Version="3.4.3" />
       <PackageReference Include="MySql.Data" Version="8.0.20" />
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Bolgrot.Core.Ankama.Protocol\Bolgrot.Core.Ankama.Protocol.csproj" />
       <ProjectReference Include="..\Bolgrot.Core.Common\Bolgrot.Core.Common.csproj" />
     </ItemGroup>
 
