[Core] Protocol - Adding types

--- a/Bolgrot.Core.Ankama.Protocol/Bolgrot.Core.Ankama.Protocol.csproj
+++ b/Bolgrot.Core.Ankama.Protocol/Bolgrot.Core.Ankama.Protocol.csproj
@@ -4,4 +4,12 @@
         <TargetFramework>netcoreapp3.1</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+      <Folder Include="Types" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    </ItemGroup>
+
 </Project>
