--- a/Bolgrot.Core.Common/Bolgrot.Core.Common.csproj
+++ b/Bolgrot.Core.Common/Bolgrot.Core.Common.csproj
@@ -6,6 +6,7 @@
 
     <ItemGroup>
       <PackageReference Include="Autofac" Version="5.2.0" />
+      <PackageReference Include="EmbedIO" Version="3.4.3" />
       <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
       <PackageReference Include="ServiceStack.OrmLite.MySql" Version="5.9.0" />
     </ItemGroup>
